# mietcheck

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  002_add_stripe_fields.py  003_add_email_verification.py  004_add_document_path.py
backend/app/: config.py  database.py  dependencies.py  main.py
backend/app/api/: admin.py  auth.py  betriebskosten_assistent.py  betriebskostenspiegel.py  bills.py  contracts.py  feedback.py  gdpr.py  mietpreisbremse.py  mietrecht_checks.py  mietvertrag.py  objections.py  stripe_api.py  users.py
backend/app/core/: auth.py  bill_checker.py  security.py
backend/app/models/: __init__.py  bill_position.py  check_result.py  email_log.py  feedback.py  objection_letter.py  rental_contract.py  user.py  utility_bill.py
backend/app/schemas/: __init__.py  auth.py  feedback.py  rental_contract.py  user.py  utility_bill.py
backend/app/services/: email_service.py  pdf_service.py
backend/tests/: conftest.py  test_auth.py  test_bill_checker.py  test_bills_api.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/admin/: page.tsx
frontend/src/app/agb/: page.tsx
frontend/src/components/: cookie-consent.tsx  theme-provider.tsx
frontend/src/hooks/: use-bills.ts  use-contracts.ts
frontend/src/lib/: api.ts  auth.ts  types.ts  utils.ts
nginx/: default.conf  nginx.conf
(+35 files in other folders)
